<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarNota.AgregarNota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvUidUsuario"
            android:hint="@string/UidUsuarioAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvCorreoUsuario"
            android:hint="@string/CorreoUsuarioAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="@font/worksans"
            android:visibility="gone"/>

        <!-- contiene el icono y el texto de la fecha -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- icono para la fecha y la hora -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icono_fecha_hora"/>

            <TextView
                android:text="@string/FechaHoraActualTextoAn"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvFechaHoraActual"
            android:hint="@string/FechaHoraActualAn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/worksans"/>

        <EditText
            android:id="@+id/edtTitulo"
            android:hint="@string/TituloAn"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edtDescripcion"
            android:hint="@string/DescripcionAn"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_CalerndarioAn"
                app:icon="@drawable/icono_calendario" />

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/FechaAn"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvEstado"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/worksans"
            android:text="@string/EstadoAn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>