<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/IniciarSesionLg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/worksans"
            android:textSize="25sp"
            android:gravity="center"/>

        <!-- llamamos a la animación -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="iniciar_sesion.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtCorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CorreoLg"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edtPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PassLg"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:fontFamily="@font/worksans"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ingresaLg"
            android:fontFamily="@font/worksans"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvUsuarioNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/UsuarioNuevoLg"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:fontFamily="@font/worksans"
            android:layout_marginTop="20dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>

