<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ElijaOpcionCd"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/worksans"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="seleccionar.json"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <Button
        android:id="@+id/btnEliminar"
        android:text="@string/EliminarCd"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:icon="@drawable/icono_eliminar_cd"/>

    <Button
        android:id="@+id/btnActualizar"
        android:text="@string/ActualizarCd"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/worksans"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:icon="@drawable/icono_actualizar_cd"/>

</androidx.appcompat.widget.LinearLayoutCompat>